# biased_noise_tile_code

./: .gitignore  README.md  requirements.txt
Finite_bias_code_capacity_model/: Code_capacity_TI_(0.25,0.5).py  Code_capacity_linear.py
error_propagation/: PLOTTING_GUIDE.md  README.md  pyproject.toml
error_propagation/examples/: css_tile_ideal.py  css_tile_ideal_cnot.py  css_tile_ideal_cz.py  css_tile_neutral_atom.py  css_tile_superconducting.py  css_tile_trapped_ion_cnot.py  css_tile_trapped_ion_cz.py  linear_deformation_ideal.py  linear_deformation_ideal_cnot.py  linear_deformation_ideal_cz.py  linear_deformation_neutral_atom.py  linear_deformation_superconducting.py  linear_deformation_trapped_ion_cnot.py  linear_deformation_trapped_ion_cz.py  ti_middle_ideal.py  ti_middle_ideal_cnot.py  ti_middle_ideal_cz.py  ti_middle_neutral_atom.py  ti_middle_superconducting.py  ti_middle_trapped_ion_cnot.py  ti_middle_trapped_ion_cz.py  xy_deformation_ideal.py  xy_deformation_ideal_cnot.py  xy_deformation_ideal_cz.py  xy_deformation_neutral_atom.py  xy_deformation_superconducting.py  xy_deformation_trapped_ion_cnot.py  xy_deformation_trapped_ion_cz.py
error_propagation/examples/old_ordering/: css_tile_superconducting.py
error_propagation/pauli_distribution/: __init__.py  pauli_strings.py  plot_convergence_file.py  plot_progress_file.py  plot_results.py
error_propagation/pauli_distribution.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
error_propagation/tests/: benchmark_counts_mode.py  py_test.py  xyhs_export.json  xzzx_export.json
(+34 files in other folders)
