# pyproject.toml
[project]
name = "pauli_distribution"
version = "0.1.0"
description = "Pauli Strings distribution in Clifford circuits using Stim"
authors = [{ name="Pedro Medina", email="pumg005@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"

dependencies = [
    "stim>=1.11.0",
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pauli_distribution*"]
exclude = ["trial_*", "examples*", "tests*"]
